--- a/src/assets/scss/bootstrap/_variables.scss
+++ b/src/assets/scss/bootstrap/_variables.scss
@@ -39,7 +39,7 @@ $indigo:  #3F51B5 !default;
 $purple:  #9C27B0 !default;
 $pink:    #e83e8c !default;
 $red:     #DD5151 !default;
-$orange:  #FF6600 !default;
+$orange:  #FF6F00 !default;
 $yellow:  #FFEB3B !default;
 $green:   #1CAD49 !default;
 $teal:    #009688 !default;
@@ -194,7 +194,7 @@ $body-color:                $gray-900 !default;
 //
 // Style anchor elements.
 
-$link-color:                              theme-color("primary") !default;
+$link-color:                              #0A6CFF !default;
 $link-decoration:                         none !default;
 $link-hover-color:                        darken($link-color, 15%) !default;
 $link-hover-decoration:                   underline !default;
