--- a/src/assets/scss/home.scss
+++ b/src/assets/scss/home.scss
@@ -92,7 +92,7 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 .login-img {
-  background: url("../img/flower.gif");
+  background: url("../img/pana.svg");
 }
 .azure-logo {
   background: url("../img/azure.png");
