--- a/src/app/apps/apps.component.scss
+++ b/src/app/apps/apps.component.scss
@@ -44,27 +44,35 @@
       overflow: hidden;
       transition: 0.25s;
       img {
-        min-width: 20px;
-        max-width: 20px;
-        min-height: 20px;
-        max-height: 20px;
-        border-radius: 50%;
+        min-width: 36px;
+        max-width: 36px;
+        min-height: 36px;
+        max-height: 36px;
       }
     }
   }
 }
 .sidenav {
-  min-width: 180px;
-  max-width: 180px;
+  min-width: 60px;
+  max-width: 260px;
   min-height: calc(100vh - 60px);
   max-height: calc(100vh - 60px);
   transition: 0.25s;
-  overflow: auto;
-  &.hide {
-    margin-left: -170px;
-  }
+  overflow-y: auto;
+  scrollbar-gutter: stable;
+  overflow-x: hidden;
+  // &.hide {
+  //   margin-left: -170px;
+  // }
   .icon-block-group {
     width: 90%;
+    font-weight: 400;
+    font-size: 12px;
+    color: #181818;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    transition: 0.4s;
   }
   .icon-block {
     min-height: 30px;
@@ -175,3 +183,43 @@
   top: 100px;
   left: 10px;
 }
+
+.icon-group-acc {
+  transition: 0.4s;
+}
+
+.chevron {
+  transform: rotate(180deg);
+}
+
+.border-c{
+  border-color: #ECECEC !important;
+}
+
+.items{
+  margin-left: 15px;
+  color: #7A7A7A;
+  &:hover{
+    cursor: pointer;
+    color: #181818 !important ;
+  }
+}
+
+.fa-point{
+  cursor: pointer;
+  color: #B5B8BC  ;
+}
+
+// .scroll::-webkit-scrollbar {
+//   width: 12px;
+// }
+
+// .scroll::-webkit-scrollbar-track {
+//   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+//   border-radius: 10px;
+// }
+
+// .scroll::-webkit-scrollbar-thumb {
+//   border-radius: 10px;
+//   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+// }
