--- a/src/assets/scss/home.scss
+++ b/src/assets/scss/home.scss
@@ -90,6 +90,10 @@ input[type="number"]::-webkit-outer-spin-button {
   // background-image: url("../img/data.stack_author_light_optimized.svg");
   background-image: url("../img/logo_default.svg");
 }
+.logo-mini {
+  // background-image: url("../img/data.stack_author_light_optimized.svg");
+  background-image: url("../img/logo-mini.svg");
+}
 
 .login-img {
   background: url("../img/pana.svg");
