Changing home to app panel

--- a/src/app/admin/app-list/app-list.component.scss
+++ b/src/app/admin/app-list/app-list.component.scss
@@ -145,3 +145,14 @@
       right: 5px;
   }
 }
+
+.profileImage {
+  width: 48px;
+  border-radius: 50%;
+  // background: #512DA8;
+  font-size: 35px;
+  color: #fff;
+  text-align: center;
+  line-height: 150px;
+  margin: 20px 0;
+}
