--- a/src/app/admin/app-list/app-list.component.html
+++ b/src/app/admin/app-list/app-list.component.html
@@ -1,4 +1,7 @@
-<div class="default-loader d-flex justify-content-center w-100 h-100" *ngIf="showLazyLoader">
+<div
+  class="default-loader d-flex justify-content-center w-100 h-100"
+  *ngIf="showLazyLoader"
+>
   <div class="align-self-center text-center">
     <span class="fa fa-spinner fa-pulse fa-3x"></span>
     <div class="text-secondary mt-2">Processing...</div>
@@ -8,11 +11,23 @@
   <!-- <div class="d-flex flex-column align-items-center justify-content-center">
     <odp-search-box (enteredText)="searchTerm = $event" (reset)="searchTerm = '';"></odp-search-box>
   </div> -->
-  <div class="d-flex justify-content-between align-items-center border-bottom py-4">
-    <div class="font-weight-bold font-lg text-accent">Apps</div>
-    <odp-search-box (enteredText)="searchTerm = $event" (reset)="searchTerm = '';" [selectOnEnter]="true"
-      (enteredPressed)="enterToSelect($event)"></odp-search-box>
-    <button class="add-new btn-min-width btn btn-primary" (click)="newApp()">
+  <div
+    class="d-flex justify-content-between align-items-center border-bottom py-4"
+  >
+    <div class="font-weight-bold font-lg text-accent">
+      {{ isHome ? 'Select an app to proceed' : 'Apps' }}
+    </div>
+    <odp-search-box
+      (enteredText)="searchTerm = $event"
+      (reset)="searchTerm = ''"
+      [selectOnEnter]="true"
+      (enteredPressed)="enterToSelect($event)"
+    ></odp-search-box>
+    <button
+      class="add-new btn-min-width btn btn-primary"
+      (click)="newApp()"
+      *ngIf="isSuperadmin"
+    >
       <span class="fa fa-plus mr-2"></span>
       <span class="text">Add New App</span>
     </button>
@@ -26,35 +41,78 @@
       </div>
       <div class="app-name text-center mt-2 text-primary hover" (click)="newApp()">New app</div>
     </div> -->
-    <ng-container *ngIf="!appList || appList.length==0">
-      <odp-loading-placeholder width="48" height="48" *ngFor="let app of dummyRows" class="mt-5 mx-5">
+    <ng-container *ngIf="!appList || appList.length == 0">
+      <odp-loading-placeholder
+        width="48"
+        height="48"
+        *ngFor="let app of dummyRows"
+        class="mt-5 mx-5"
+      >
       </odp-loading-placeholder>
     </ng-container>
-    <ng-container *ngFor="let app of appList|filterApp:searchTerm;let appIndex = index;">
-      <div class="app-card d-flex flex-column mt-3 mr-3 rounded position-relative"
-        (click)="appOptions[appIndex] = true">
-        <div class="d-flex justify-content-end mt-2 mr-2 delete-option">
+    <ng-container
+      *ngFor="let app of appList | filterApp: searchTerm; let appIndex = index"
+    >
+      <div
+        class="app-card d-flex flex-column mt-3 mr-3 rounded position-relative"
+        (click)="appOptions[appIndex] = true"
+      >
+        <div
+          class="d-flex justify-content-end mt-2 mr-2 delete-option"
+          *ngIf="isSuperadmin"
+        >
           <div class="ml-3 hover ignore-outside">
             <span class="fas fa-ellipsis-h text-primary ignore-outside"></span>
           </div>
         </div>
-        <div class="position-absolute hover app-options p-2 bg-white" (outside)="appOptions[appIndex] = false"
-          [ngClass]="{'d-none': !appOptions[appIndex], 'd-flex': appOptions[appIndex]}" id="moreOptions" odpClickOutside
-          [ignore]="['.ignore-outside']">
-          <div class="text-primary" (click)="deleteApp(app,appIndex)">Delete App</div>
+        <div
+          class="position-absolute hover app-options p-2 bg-white"
+          (outside)="appOptions[appIndex] = false"
+          [ngClass]="{
+            'd-none': !appOptions[appIndex],
+            'd-flex': appOptions[appIndex]
+          }"
+          id="moreOptions"
+          odpClickOutside
+          [ignore]="['.ignore-outside']"
+        >
+          <div class="text-primary" (click)="deleteApp(app, appIndex)">
+            Delete App
+          </div>
         </div>
-        <div class="settings-wrapper d-flex flex-column align-items-center px-4 pt-2 position-relative">
-          <div class=" app-thumbnail
-                d-flex align-items-center justify-content-center bg-light hover" (click)="useApp(app._id)">
-            <img *ngIf="app.logo && app.logo.thumbnail" [src]="app.logo.thumbnail" alt="Logo">
-            <odp-app-icon *ngIf="!app.logo || !app.logo.thumbnail" color="aaa"></odp-app-icon>
+        <div
+          class="settings-wrapper d-flex flex-column align-items-center px-4 pt-2 position-relative"
+        >
+          <div
+            class="app-thumbnail d-flex align-items-center justify-content-center bg-light hover"
+            (click)="useApp(app._id)"
+          >
+            <img
+              *ngIf="app.logo && app.logo.thumbnail"
+              [src]="app.logo.thumbnail"
+              alt="Logo"
+            />
+            <!-- <odp-app-icon
+              *ngIf="!app.logo || !app.logo.thumbnail"
+              color="aaa"
+            ></odp-app-icon> -->
+            <div
+              *ngIf="!app.logo"
+              class="profileImage"
+              [ngStyle]="{ background: app.bg }"
+            >
+              {{ app.firstLetter }}
+            </div>
           </div>
           <!-- <div class="app-settings rounded-circle position-absolute bg-primary d-flex align-items-center justify-content-center align-self-end hover"
           ngbTooltip="App settings" routerLink="{{app._id}}">
           <span class="fa fa-cog text-white"></span>
         </div> -->
-          <div class="app-name text-center text-truncate mt-2" [ngbTooltip]="app._id">
-            {{app._id}}
+          <div
+            class="app-name text-center text-truncate mt-2"
+            [ngbTooltip]="app._id"
+          >
+            {{ app._id }}
           </div>
         </div>
 
@@ -79,40 +137,86 @@
     <div class="d-flex flex-column w-100">
       <div class="d-flex align-items-center justify-content-between mb-3">
         <div class="d-flex align-items-center">
-          <span class="icon-circle d-flex align-items-center justify-content-center mr-2">
+          <span
+            class="icon-circle d-flex align-items-center justify-content-center mr-2"
+          >
             <odp-partner-icon size="16" color="1CAD49"></odp-partner-icon>
           </span>
-          <span class="font-weight-bold ">Create New App</span>
+          <span class="font-weight-bold">Create New App</span>
         </div>
-        <span class="fa fa-times text-muted hover" (click)="!createAppLoader && newAppModalRef.close(false)"></span>
+        <span
+          class="fa fa-times text-muted hover"
+          (click)="!createAppLoader && newAppModalRef.close(false)"
+        ></span>
       </div>
       <div class="d-flex flex-column w-100" [formGroup]="form">
         <label for="name" class="font-sm text-secondary">
           <span class="text">Name</span>
-          <sup class="text-danger font-normal ml-2" ngbTooltip="Mandatory field">&bull;</sup>
+          <sup class="text-danger font-normal ml-2" ngbTooltip="Mandatory field"
+            >&bull;</sup
+          >
         </label>
         <div class="name-wrapper position-relative">
-          <input type="text" class="form-control" id="name" formControlName="_id" placeholder="Give a name" odpAutoFocus
+          <input
+            type="text"
+            class="form-control"
+            id="name"
+            formControlName="_id"
+            placeholder="Give a name"
+            odpAutoFocus
             (keyup.enter)="newAppDesc.focus()"
-            [ngClass]="{'is-invalid':form.get('_id').invalid && (form.get('_id').dirty || form.get('_id').touched)}">
-          <ng-container *ngIf="form.get('_id').invalid && (form.get('_id').dirty || form.get('_id').touched)">
-            <span *ngIf="form.get('_id').hasError('required')"
-              class="text-danger position-absolute fa fa-exclamation-circle" container="body"
-              ngbTooltip="Name is required"></span>
-            <span *ngIf="form.get('_id').hasError('pattern')"
-              class="text-danger position-absolute fa fa-exclamation-circle" container="body"
-              ngbTooltip="Name can be only be alphanumeric and can contain dash(-)"></span>
-            <span *ngIf="form.get('_id').hasError('maxlength')"
-              class="text-danger position-absolute fa fa-exclamation-circle" container="body"
-              ngbTooltip="Name should be within 40 characters"></span>
+            [ngClass]="{
+              'is-invalid':
+                form.get('_id').invalid &&
+                (form.get('_id').dirty || form.get('_id').touched)
+            }"
+          />
+          <ng-container
+            *ngIf="
+              form.get('_id').invalid &&
+              (form.get('_id').dirty || form.get('_id').touched)
+            "
+          >
+            <span
+              *ngIf="form.get('_id').hasError('required')"
+              class="text-danger position-absolute fa fa-exclamation-circle"
+              container="body"
+              ngbTooltip="Name is required"
+            ></span>
+            <span
+              *ngIf="form.get('_id').hasError('pattern')"
+              class="text-danger position-absolute fa fa-exclamation-circle"
+              container="body"
+              ngbTooltip="Name can be only be alphanumeric and can contain dash(-)"
+            ></span>
+            <span
+              *ngIf="form.get('_id').hasError('maxlength')"
+              class="text-danger position-absolute fa fa-exclamation-circle"
+              container="body"
+              ngbTooltip="Name should be within 40 characters"
+            ></span>
           </ng-container>
         </div>
-        <label for="description" class="font-sm text-secondary mt-3">Description</label>
-        <textarea #newAppDesc class="form-control" id="description" rows="5" placeholder="A brief description. Optional"
-          formControlName="description" (keydown.enter)="$event.preventDefault()"
-          (keyup.enter)="createNewAppBtn.click();"></textarea>
-        <label for="timezone" class="font-sm text-secondary mt-3">Timezone</label>
-        <odp-timezone-picker [edit]="{status:true}" formControlName="defaultTimezone"></odp-timezone-picker>
+        <label for="description" class="font-sm text-secondary mt-3"
+          >Description</label
+        >
+        <textarea
+          #newAppDesc
+          class="form-control"
+          id="description"
+          rows="5"
+          placeholder="A brief description. Optional"
+          formControlName="description"
+          (keydown.enter)="$event.preventDefault()"
+          (keyup.enter)="createNewAppBtn.click()"
+        ></textarea>
+        <label for="timezone" class="font-sm text-secondary mt-3"
+          >Timezone</label
+        >
+        <odp-timezone-picker
+          [edit]="{ status: true }"
+          formControlName="defaultTimezone"
+        ></odp-timezone-picker>
         <!-- <select id="timezone" class="form-control" formControlName="defaultTimezone">
             <option *ngFor="let tz of timezones" [value]="tz">{{tz}}</option>
           </select> -->
@@ -120,14 +224,20 @@
           formControlName="description" (keydown.enter)="$event.preventDefault()"
           (keyup.enter)="createNewAppBtn.click();"></textarea> -->
       </div>
-      <div class="text-danger mt-3">{{errorMessage}} &nbsp;</div>
+      <div class="text-danger mt-3">{{ errorMessage }} &nbsp;</div>
     </div>
     <div class="d-flex align-self-end justify-content-end w-100 mt-3">
-      <button #createNewAppBtn type="button"
+      <button
+        #createNewAppBtn
+        type="button"
         class="btn btn-min-width btn-create"
         [disabled]="form.invalid || createAppLoader"
-        (click)="createApp()">
-        <span class="fa fa-spinner fa-pulse mr-1" *ngIf="createAppLoader"></span>
+        (click)="createApp()"
+      >
+        <span
+          class="fa fa-spinner fa-pulse mr-1"
+          *ngIf="createAppLoader"
+        ></span>
         Create App
       </button>
     </div>
