--- a/src/app/home/control-panel/user/user-manage/user-manage.component.scss
+++ b/src/app/home/control-panel/user/user-manage/user-manage.component.scss
@@ -1,406 +1,31 @@
 @import "src/assets/scss/bootstrap/_functions.scss";
 @import "src/assets/scss/bootstrap/_variables.scss";
-.usermanage-container {
-  background-color: $white;
-  height: calc(100vh - 200px);
-  width: calc(100vw - 26vw);
-  overflow-y: auto;
-  .user {
-    &-overview {
-      .user-initials {
-        min-width: 80px;
-        max-width: 80px;
-        min-height: 80px;
-        max-height: 80px;
-        border-radius: 50%;
-        background-color: $light;
-        span {
-          font-size: 2rem;
-        }
-      }
-      .admin-star {
-        top: 75px;
-        left: 75px;
-      }
-      .user-action {
-        right: 24px;
-      }
-      .uo-icon {
-        min-width: 30px;
-        max-width: 30px;
-        min-height: 30px;
-        max-height: 30px;
-        border-radius: 50%;
-        text-align: center;
-        top: 50%;
-        left: 72px;
-        odp-app-icon {
-          top: 50%;
-          left: 50%;
-          transform: translate(-50%, -50%);
-        }
-      }
-      .user-name {
-        font-size: 28px;
-        font-weight: 600;
-        max-width: 500px;
-      }
-      &-details {
-        min-width: 650px;
-        #userPhone {
-          transform: rotateY(180deg);
-          padding-top: 2px;
-        }
-        .username-text {
-          display: inline-block;
-          max-width: 250px;
-        }
-      }
-      .email-id {
-        max-width: 280px;
-      }
-    }
-    &-action {
-      .moreOptions {
-        top: 15px;
-        right: 0;
-        background-color: $white;
-        max-width: 9rem;
-        min-width: 9rem;
-        border-radius: 0.5rem;
-        z-index: 20;
 
-        ul {
-          list-style: none;
-
-          li:not(:last-child) {
-            border-bottom: $border-width solid $border-color;
-          }
-
-          li:hover {
-            background-color: $light;
-          }
-        }
-      }
-    }
-    &-additionInformation {
-      overflow: hidden;
-      .properties {
-        min-height: 107px;
-        max-height: 107px;
-        overflow: hidden;
-        .props {
-          height: 100%;
-          min-width: 286px;
-          max-width: 286px;
-          .key-ellipsis {
-            display: inline-block;
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            -o-text-overflow: ellipsis;
-            min-width: 100px;
-            max-width: 100px;
-          }
-          .value-ellipsis {
-            display: inline-block;
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            -o-text-overflow: ellipsis;
-            min-width: 78px;
-            max-width: 78px;
-          }
-        }
-        .delete-prop {
-          visibility: hidden;
-          min-width: 20px;
-          max-width: 20px;
-        }
-        .props:hover {
-          background: #efefef;
-          border-radius: 4px;
-        }
-        .props:hover .delete-prop {
-          visibility: visible;
-          cursor: pointer;
-        }
-      }
-      .no-info {
-        text-align: center;
-        font-size: 1.5rem;
-        font-style: italic;
-      }
-      .attrs-grid-container {
-        height: 250px;
-        display: grid;
-      }
-    }
-    &-team {
-      min-height: calc(100vh - 480px);
-      .team-container {
-        padding: 15px;
-        width: 100%;
-        display: flex;
-        flex-wrap: wrap;
-        
-        .team-overview {
-          min-width: 200px;
-          max-width: 200px;
-          border-radius: 4px;
-          .remove-group {
-            top: 10px;
-            left: 90%;
-            display: none;
-          }
-          &:hover {
-            background-color: $light;
-            .remove-group {
-              display: block;
-            }
-          }
-        }
-        .team {
-          width: 100px;
-          height: 100px;
-          border-radius: 50%;
-          border: 4px solid $light;
-        }
-        .app-admin {
-          width: 500px;
-          height: 260px;
-          border-radius: 6px;
-          // box-shadow: 0 2px 6px $border;
-          .icon {
-            min-width: 40px;
-            max-width: 40px;
-            min-height: 40px;
-            max-height: 40px;
-            border-radius: 50%;
-            text-align: center;
-            odp-app-icon {
-              top: 50%;
-              left: 50%;
-              transform: translate(-50%, -50%);
-            }
-          }
-          .heading,
-          .caption {
-            text-align: center;
-          }
-        }
-      }
-      .user-apps {
-        .app-container {
-          padding: 15px 15px 0 0;
-          width: 100%;
-          .app-overview {
-            min-width: 250px;
-            max-width: 250px;
-          }
-        }
-        .app-icon {
-          height: 32px;
-          width: 32px;
-          text-align: center;
-          border-radius: 8px;
-          img {
-            height: 32px;
-            width: 32px;
-          }
-        }
-      }
-      .team-length {
-        width: 33%;
-      }
-      .app-admin-line {
-        width: 33%;
-      }
-      .team-action-btn {
-        width: 33%;
-      }
-    }
-  }
-  .additionInfo-helper {
-    //top: 30%;
-    height: 35px;
-    padding: 10px 5px;
-    text-align: center;
-  }
-  .maxH-auto {
-    max-height: 100% !important;
-  }
+.settings{
+  padding-right: 20px;
+  position: absolute;
+  top: 25px;
+  right: 20px;
 }
 
-.team-strength {
-  font-size: 1.1rem;
+.popover{
+  margin-top: 30px; 
+  border: 1px solid #ECECEC;
+  display: grid;
+  width: 150px;
+  margin-left: -30px;
 }
 
-.popup-overlay {
-  z-index: 20;
-}
-
-.popup-content {
-  left: 35%;
-  top: 40%; // Check if this css class is needed
-  z-index: 21;
-  .user-edit-container {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    margin: 0 auto;
-    border: 2px solid $border-color;
-  }
-  .reset-pwd {
-    left: 80%;
-  }
-  .field-error-symbol {
-    top: 9px;
-    left: 91%;
-  }
-}
-
-.pc-additional-info {
-  width: 650px !important;
-  height: 500px !important;
-  .header {
-    height: 40px;
-    color: $white;
-    font-weight: bold;
-    .key {
-      flex-basis: 40%;
-    }
-  }
-  .form-body {
-    min-height: 400px;
-    max-height: 400px;
-    overflow-y: auto;
-    .form-content:not(:first-child) {
-      margin-top: 1.5rem;
-    }
-  }
-  input.form-control {
-    width: 100% !important;
-  }
-  .val-input {
-    flex-basis: 50%;
-  }
-}
-
-.team-card {
-  border: 1px solid transparent;
-  transition: 0.25s;
-  .team-selected {
-    background-color: rgba($black, 0.3);
-  }
-  .team-thumbnail {
-    min-width: 100px;
-    max-width: 100px;
-    min-height: 100px;
-    max-height: 100px;
-    border-radius: 50%;
-    border: 4px solid $light;
-    overflow: hidden;
-    position: relative;
-    &-caption {
-      text-align: center;
-      color: $white;
-      padding-top: 15px;
-      font-size: 1.2rem;
-      .text {
-        font-weight: 100;
-        font-size: 1rem;
-      }
-    }
-  }
-  .app-name {
-    max-width: 100px;
-  }
-}
-
-.reset-form {
-  .error-icon {
-    top: 33px;
-    left: 63%;
-  }
-}
-
-@media screen and (min-device-width: 1200px) and (max-device-width: 1600px) and (-webkit-min-device-pixel-ratio: 1) {
-  .popup-content {
-    top: 32%;
-  }
-}
-
-.modal-content {
-  width: 100%;
-}
-
-.new-attribute-modal{
-    min-height: 400px;
-}
-
-.type-dropdown {
-  top: 2rem;
-  z-index: 2;
-  width: 178px;
-  box-shadow: 0 0 15px $gray-400;
-  .type-width {
-    width: 40px;
-    height: 40px;
-    font-size: 1.125rem;
-    display: inline-block;
-    text-decoration: none;
-  }
-  .type-width:hover {
-    background: $light;
-    border-radius: 4px;
-  }
-}
-
-.text-align-left {
-  text-align: left;
-}
-.team-name{
-    width: 130px;
-}
-
-.eye-icon{   
-  padding: 6px;
-  border-radius: 0.25rem;
-  right: -1px;
-  border-bottom: 1px solid #ccc !important;
-  border-right: 1px solid #ccc !important;
-  border-top: 1px solid #ccc !important;
-}
-.password-input{
-  width:52%;
-  border-radius: 0.25em 0em 0em 0.25em;
-}
-
-.error-icon-password {
-  right: 10%;
-  top: 7px;
-}
-.modal-label-pwd {
-  min-width: 130px;
-}
-.dropdown-itm {
+.popover-options {
+  padding: 15px;
   cursor: pointer;
-  user-select: none;
-
-  &:hover {
-    background: $light;
+  color: $headings;
+  &:hover{
+    background: #F7F7F7;
   }
 }
-.key-info-text {
-  min-height: 22px;
-}
 
-.attrs-error-icon {
-  top: 33px;
-  right: 2%;
-}
-
-.no-x {
-  background-image: none;
+.disable-option{
+  pointer-events: none;
+  background-color: $input-disabled-bg;
 }
