--- a/src/assets/scss/home.scss
+++ b/src/assets/scss/home.scss
@@ -3,7 +3,7 @@
 @import "src/assets/scss/bootstrap/_variables.scss";
 
 @font-face {
-  font-family: "Lato";
+  font-family: "Inter";
   src: url("../fonts/default/Lato-Regular.woff") format("woff"),
     /* Pretty Modern Browsers */ url("../fonts/default/Lato-Light.woff")
       format("woff"),
